[package]
name = "lysand-ap-layer"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["April John <aprl@acab.dev>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/lysand-org/lysand-ap-layer"
description = "A compatibility layer between lysands official server and activitypub"

[dependencies]
tokio = { version = "1.20.0", features = ["rt", "macros"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
actix-web = "4"
env_logger = "0.11.0"
clap = { version = "4.3.14", features = ["derive"] }
activitypub_federation = "0.5.2"
anyhow = "1.0.81"
url = "2.5.0"
rand = "0.8.5"
tracing = "0.1.40"
async-trait = "0.1.79"
enum_delegate = "0.2.0"
chrono = "0.4.37"
activitystreams-kinds = "0.3.0"
thiserror = "1.0.58"
num_cpus = "1.16.0"
actix-web-prom = { version = "0.8.0", features = ["process"] }
redis = { version = "0.25.3", features = ["tokio-comp", "tokio-rustls-comp", "cluster"] }
redis-macros = "0.3.0"
rmp-serde = "1.1.2"

[build-dependencies]
vcpkg = "0.2.15"

[profile.release]
strip = true
opt-level = 's'
lto = true
debug = 0
codegen-units = 1
panic = 'abort'
