[package]
name = "versia-ap-layer"
version = "0.1.0"
edition = "2021"
authors = ["April John <aprl@acab.dev>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/versia-pub/versia-ap-layer"
description = "A compatibility layer between versias official server and activitypub"

[dependencies]
tokio = { version = "1.20.0", features = ["rt", "macros"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
actix-web = "4"
env_logger = "0.11.0"
clap = { version = "4.3.14", features = ["derive"] }
activitypub_federation = "0.5.8"
anyhow = "1.0.81"
url = "2.5.0"
rand = "0.8.5"
tracing = "0.1.40"
async-trait = "0.1.79"
enum_delegate = "0.2.0"
activitystreams-kinds = "0.3.0"
thiserror = "1.0.58"
num_cpus = "1.16.0"
actix-web-prom = { version = "0.8.0", features = ["process"] }
serde_json = "1.0.115"
chrono = "0.4.38"
lazy_static = "1.4.0"
async_once = "0.2.6"
reqwest = { version = "0.12.4", features = ["blocking", "json", "multipart"] }
time = { version = "0.3.36", features = ["serde"] }
serde_derive = "1.0.201"
dotenv = "0.15.0"
async-recursion = "1.1.1"
base64-url = "3.0.0"
webfinger = "0.5.1"
regex = "1.10.6"
once_cell = "1.19.0"
actix-files = "0.6.6"

[dependencies.sea-orm]
version = "0.12.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-sqlite","sqlx-mysql","with-chrono"
]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "v7",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde",
]

[build-dependencies]
vcpkg = "0.2.15"

[profile.release]
strip = true
opt-level = 's'
lto = true
debug = 0
codegen-units = 1
panic = 'abort'
